# bot_core

./: main.py  pyproject.toml
bot_core/: bot.py
bot_core/functions/: base_function.py  beep.py
