[tool.poetry]
name = "telethonbotcore"
version = "0.1.0"
description = ""
authors = ["Safi Dewshi <safi.dewshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
